src/css/_core.scss
.bss-core-button {
  border: 1px solid color(background-darker);
  background: color(background);
  border-radius: 5px;
  padding: 5px 10px;
  font-size: 12px;
  transition: background 0.3s;

  &:hover {
    background: color(background-darker);
  }
}

.bss-button-container {
  position: absolute;
  left: 5px;
  bottom: 5px;
  display: flex;
  align-items: flex-end;
  gap: 10px;
}

.bss-button-container--has-buttons {
  .msg2, .d7, .d7p {
    position: relative;
  }

  .d7, .d7p {
    margin-bottom: 30px;

    .bss-button-container {
      bottom: -25px;
    }
  }

  .ads_region {
    padding-left: 45px;
  }
}

